corrections on the 'ensemble methods' notebooks

--- a/10 - Bagging/Bagging.ipynb
+++ b/10 - Bagging/Bagging.ipynb
@@ -115,7 +115,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -129,24 +131,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "nb_samples = 100000\n",
-    "means = np.zeros((nb_samples,))\n",
-    "for b in range(nb_samples):\n",
-    "    times_boot = np.random.choice(times, size=times.shape, replace=True)\n",
-    "    means[b]=np.mean(times_boot)\n",
-    "\n",
-    "count,val,_ = plt.hist(means, bins=np.arange(np.min(means),np.max(means),0.1))\n",
-    "plt.title(\"Bootstrap distribution of mean travel times\")\n",
-    "plt.show()\n",
-    "#print(count)\n",
-    "#print(val[:-1])\n",
-    "print(\"Mean from the histogram:\", np.dot(count,val[:-1]) / np.sum(count))\n",
-    "print(\"Empirical average of the bootstrap samples:\", np.mean(means))"
+    "<div class=\"alert alert-warning\">**Exercice:**<br>\n",
+    "Implement a Bootstrap algorithm to estimate the distribution of the empirical average and empirical median estimators on this data.<br>\n",
+    "Plot the histogram of these distributions.<br>\n",
+    "Estimate the estimator's empirical average from the bootstrap samples and the mean of its distribution.\n",
+    "</div>"
    ]
   },
   {
@@ -155,19 +147,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_samples = 100000\n",
-    "medians = np.zeros((nb_samples,))\n",
-    "for b in range(nb_samples):\n",
-    "    times_boot = np.random.choice(times, size=times.shape, replace=True)\n",
-    "    medians[b]=np.median(times_boot)\n",
-    "\n",
-    "count,val,_ = plt.hist(medians, bins=np.arange(np.min(medians),np.max(medians),0.5))\n",
-    "plt.title(\"Bootstrap distribution of median travel times\")\n",
-    "plt.show()\n",
-    "#print(count)\n",
-    "#print(val[:-1])\n",
-    "print(\"Median from the histogram:\", np.dot(count,val[:-1]) / np.sum(count))\n",
-    "print(\"Average median from the bootstrap samples:\", np.mean(medians))"
+    "# %load solutions/code1.py\n",
+    "### WRITE YOUR CODE HERE\n",
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
    ]
   },
   {
@@ -175,7 +157,7 @@
    "metadata": {},
    "source": [
     "Note that:\n",
-    "- the Bootstrap does not provide better estimates than the original statistics,\n",
+    "- the Bootstrap does not provide better estimates of the statistic than the original estimator,\n",
     "- however it provides *distribution* estimates (confidence intervals) and thus can help reduce variance."
    ]
   },
@@ -246,7 +228,7 @@
     "- If $\\varphi$ highly variable w.r.t. $\\mathcal{T}$, $\\varphi_B$ improves on $\\varphi$ through aggregation.\n",
     "- But if $\\varphi$ is rather stable w.r.t. $\\mathcal{T}$, $e_A\\approx e$ and since $\\varphi_B$ approximates $\\varphi_A$, $e_B$ might be greater than $e$.\n",
     "\n",
-    "For a more rigorous explanation, see the attached document \"WhyBaggingWorks.pdf\".\n",
+    "For a more rigorous explanation, see the attached document <a href=\"WhyBaggingWorks.pdf\">WhyBaggingWorks.pdf</a>.\n",
     "\n",
     "**So it does not always work?**\n",
     "\n",
@@ -271,7 +253,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
@@ -299,6 +283,16 @@
     "plt.figure()\n",
     "plt.scatter(Xblue[:,0],Xblue[:,1],c='b')\n",
     "_=plt.scatter(Xred[:,0],Xred[:,1],c='r')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's introduce three utility functions:\n",
+    "- `forest_predict` takes a forest as a list of trees and a vector of inputs, and returns the majority vote of the forest for every input.\n",
+    "- `forest_score` takes a forest, a vector of samples and labels and returns the classification accuracy of the forest.\n",
+    "- `plot_decision_boundary_forest` takes a forest and a set of labeled points and plots the points and the decision boundary."
    ]
   },
   {
@@ -351,25 +345,80 @@
     "    plt.scatter(Xred_good[:,0],Xred_good[:,1],c='r')\n",
     "    plt.scatter(Xred_bad[:,0],Xred_bad[:,1],c='m',marker='v')\n",
     "    plt.show()\n",
-    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's re-generate some training and testing data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Generate data\n",
+    "X,y = gen_data(1)\n",
+    "Xtest,X = np.split(X,[400])\n",
+    "ytest,y = np.split(y,[400])\n",
+    "\n",
+    "Xblue = X[y==-1]\n",
+    "Xred = X[y==1]\n",
+    "plt.figure(figsize=(8,8))\n",
+    "plt.scatter(Xblue[:,0],Xblue[:,1],c='b')\n",
+    "plt.scatter(Xred[:,0],Xred[:,1],c='r');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">**Exercice:**<br>\n",
+    "Implement a Bagging procedure that builds a forest of 101 trees.<br>\n",
+    "Monitor the training and generalization error of individual trees and of the forest, along the forest growth.<br>\n",
+    "Display and comment.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import tree\n",
+    "from sklearn.utils import resample\n",
+    "\n",
     "### Growing the forest\n",
     "Nbootstrap = 101\n",
     "forest = list()\n",
     "tree_training_error = np.zeros(Nbootstrap)\n",
     "tree_generalization_error = np.zeros(Nbootstrap)\n",
     "forest_training_error = np.zeros(Nbootstrap)\n",
-    "forest_generalization_error = np.zeros(Nbootstrap)\n",
-    "for i in range(Nbootstrap):\n",
-    "    Xb, yb = resample(X, y)\n",
-    "    dt = tree.DecisionTreeClassifier(criterion='entropy')\n",
-    "    dt.fit(Xb,yb)\n",
-    "    forest.append(dt)\n",
-    "    # Eval\n",
-    "    tree_training_error[i]=1.-dt.score(X,y)\n",
-    "    tree_generalization_error[i] = 1.-dt.score(Xtest,ytest)\n",
-    "    forest_training_error[i]=forest_score(forest,X,y)\n",
-    "    forest_generalization_error[i]=forest_score(forest,Xtest,ytest)\n",
-    "\n",
+    "forest_generalization_error = np.zeros(Nbootstrap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/code2.py\n",
+    "### WRITE YOUR CODE HERE\n",
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "### Display\n",
     "print(\"Standard deviation of single tree training error: %g\"%np.std(tree_training_error))\n",
     "print(\"Standard deviation of single tree generalization error: %g\"%np.std(tree_generalization_error))\n",
@@ -409,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
