--- a/9 - Boosting/Boosting.ipynb
+++ b/9 - Boosting/Boosting.ipynb
@@ -308,7 +308,49 @@
    "source": [
     "# %load solutions/code1.py\n",
     "### WRITE YOUR CODE HERE\n",
-    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n",
+    "\n",
+    "Nsteps = 100\n",
+    "forest = list()\n",
+    "sample_weights = np.ones(len(y))/len(y)\n",
+    "tree_weights = np.zeros(Nsteps)\n",
+    "single_tree_training_error = np.zeros(Nsteps)\n",
+    "overall_training_error = np.zeros(Nsteps)\n",
+    "generalization_error = np.zeros(Nsteps)\n",
+    "for i in range(Nsteps):\n",
+    "    # Train tree\n",
+    "    dt = tree.DecisionTreeClassifier(criterion='entropy',max_depth=3)\n",
+    "    dt.fit(X,y,sample_weight=sample_weights)\n",
+    "    # Compute error\n",
+    "    y_pred = dt.predict(X)\n",
+    "    classif_error = sum(np.not_equal(y_pred, y)*sample_weights) / sum(sample_weights)\n",
+    "    forest.append(dt)\n",
+    "    # Get tree weight\n",
+    "    alpha = .5*np.log((1-classif_error)/classif_error)\n",
+    "    tree_weights[i] = alpha\n",
+    "    # Update weights\n",
+    "    sample_weights = sample_weights*np.exp(-alpha*y_pred*y)\n",
+    "    sample_weights = sample_weights/sum(sample_weights)\n",
+    "    # Plot and store data\n",
+    "    #plot_decision_boundary_forest(forest, sample_weights, X, y)\n",
+    "    single_tree_training_error[i] = classif_error\n",
+    "    y_pred = forest_predict(forest, tree_weights, X)\n",
+    "    overall = sum(np.not_equal(y_pred, y))/len(y)\n",
+    "    overall_training_error[i] = overall\n",
+    "    y_pred = forest_predict(forest, tree_weights, Xtest)\n",
+    "    gen = sum(np.not_equal(y_pred, ytest))/len(ytest)\n",
+    "    generalization_error[i] = gen\n",
+    "    #print(\"Nb trees %d. Last tree error %.3g. Training error %.3g. Generalization error %.3g. Press Enter\"\n",
+    "    #      %(len(forest),classif_error, overall, gen))\n",
+    "    #input()\n",
+    "\n",
+    "plt.figure(figsize=(8,8))\n",
+    "plt.plot(single_tree_training_error,c='b')\n",
+    "plt.plot(overall_training_error,c='r')\n",
+    "plt.plot(generalization_error,c='g')\n",
+    "plt.show()\n",
+    "plt.figure(figsize=(8,8))\n",
+    "plot_decision_boundary_forest(forest, sample_weights, X, y)\n"
    ]
   },
   {
@@ -364,7 +406,7 @@
     "\n",
     "To simplify the notation, we will write $\\mathbb{E}_{x,y}$ for $\\mathbb{E}_{(x,y)\\sim p(x,y)}$.\n",
     "\n",
-    "So if we assume an current function $f_k$, one can perform gradient descent by writing \n",
+    "So if we assume an current function $f_{k-1}$, one can perform gradient descent by writing \n",
     "$$f_{k} = f_{k-1} + \\alpha_{k} h_{k}$$\n",
     "Where\n",
     "$$h_{k} = \\nabla_f \\left[\\mathbb{E}_{x,y} \\left( L(f_{k-1}(x),y) \\right)\\right] = \\mathbb{E}_{x,y} \\left[ \\nabla_f L(f_{k-1}(x),y) \\right]$$\n",
@@ -378,7 +420,7 @@
     "\n",
     "Taking the gradient with respect to $f$ functions in $\\mathcal{H}$ is quite an abstract operation, so how do we choose the descent direction in practice? The key remark here is to notice that, for a given function $f$, although $f$ lives in a possibly infinite-dimensional function space, $f(x_i)$ lives in $\\mathbb{R}$ and is a descriptor of $f$ (around $x_i$). Thus, the function that would fit the training set $\\left(x_i, \\left[\\frac{\\partial L(f(x), y)}{\\partial f(x)}\\right]_{f = f_{k-1}}\\right)$ is an approximate descent direction.\n",
     "\n",
-    "The initial functionn $f_0$ is chosen to be a constant function, so:\n",
+    "The initial function $f_0$ is chosen to be a constant function, so:\n",
     "$$f_0 = \\arg\\min_\\gamma \\sum_i L(\\gamma, y_i)$$\n",
     "\n",
     "So the algorithm can be written:\n",
@@ -387,7 +429,7 @@
     "For $k=1$ to $K$\n",
     "<ul>\n",
     "<li> Compute the pseudo-residuals\n",
-    "$$r_i = \\left[ \\frac{\\partial L(f(x), y)}{\\partial f(x)} \\right]_{f = f_{k-1}}$$\n",
+    "$$r_i = \\left[ \\frac{\\partial L(f(x_i), y)}{\\partial f(x_i)} \\right]_{f = f_{k-1}}$$\n",
     "<li> Train $h_k$ to fit the dataset $\\left(x_i, r_i\\right)$\n",
     "<li> Find $\\alpha_k$ though line search\n",
     "$$\\alpha_{k} = \\arg\\min_\\alpha \\left[ \\sum_i L\\left(f_{k-1}(x_i) + \\alpha h_{k}(x_i),y_i\\right) \\right]$$\n",
@@ -425,6 +467,8 @@
    "metadata": {},
    "source": [
     "# <a id=\"sec6\"></a> 6. Examples\n",
+    "\n",
+    "If you have done the previous notebooks, you are used to these two examples now.\n",
     "\n",
     "## <a id=\"sec6-1\"></a>6.1 Spam or ham?"
    ]
@@ -598,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
