update NN notebook

--- a/6 - Artificial Neural Networks/Artificial neural networks.ipynb
+++ b/6 - Artificial Neural Networks/Artificial neural networks.ipynb
@@ -225,7 +225,7 @@
     "\n",
     "Let's first suppose that our data points $(x,y)$ are drawn from a probability distribution $p(x,y)$.\n",
     "\n",
-    "**Loss function**\n",
+    "## 4.1 Loss function\n",
     "\n",
     "After all, a neural network with a fixed graph structure is a parametric function $f_\\theta$ where $\\theta$ is the vector of all parameters (all weights and biases). Learning a neural network that correctly predicts $y$ corresponds to finding the parameters $\\theta$ that minimize the following function.\n",
     "$$L(\\theta) = \\displaystyle \\mathbb{E}_{(x,y)\\sim p(x,y)} \\left[ \\left(f_\\theta(x) - y\\right)^2 \\right]$$\n",
@@ -260,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Gradient descent**\n",
+    "## 4.2 Stochastic gradient descent\n",
     "\n",
     "Let's say we have an initial guess $\\theta_0$ for the parameters of $f_\\theta$. How can we change this guess so that we minimize $L(\\theta)$? Plain gradient descent tells us we should move in the opposite direction of the gradient of $L(\\theta)$ with respect to $\\theta$. So let's write this gradient:\n",
     "\n",
@@ -300,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Minibatches**\n",
+    "## 4.3 Minibatches\n",
     "\n",
     "Notation disambiguation: $\\theta_k$ refers to the $k$th parameter vector in the sequence above, $\\theta_j$ refers to the $j$th component of vector $\\theta$.\n",
     "\n",
@@ -324,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Recursive gradient computation**\n",
+    "# 4.4 Recursive gradient computation\n",
     "\n",
     "For the update above to be feasible, we need to have a differentiable $f_\\theta$. Let's take a close look at the gradient $\\nabla_\\theta f_\\theta(x)$ and write it as:\n",
     "\\begin{align*}\n",
@@ -619,7 +619,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Attachments",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
