--- a/1 - Unsupervized Learning/Unsupervized Learning.ipynb
+++ b/1 - Unsupervized Learning/Unsupervized Learning.ipynb
@@ -4,7 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dimensionality reduction"
+    "This notebook is part of the [Machine Learning class](https://github.com/erachelson/MLclass) by [Emmanuel Rachelson](https://personnel.isae-supaero.fr/emmanuel-rachelson?lang=en).\n",
+    "\n",
+    "License: CC-BY-SA-NC."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"font-size:22pt; line-height:25pt; font-weight:bold; text-align:center;\">Unsupervized Learning</div>\n",
+    "\n",
+    "Three Unsupervized Learning tasks are illustrated here:\n",
+    "1. [Dimensionality reduction](#dim)\n",
+    "2. [Clustering](#clust)\n",
+    "3. [Density estimation](#density)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <a id=\"dim\"></a> 1. Dimensionality reduction"
    ]
   },
   {
@@ -276,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Clustering"
+    "# <a id=\"clust\"></a> 2. Clustering"
    ]
   },
   {
@@ -335,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Density estimation"
+    "# <a id=\"density\"></a> 3. Density estimation"
    ]
   },
   {
