--- a/2 - Text data preprocessing/Text data preprocessing.ipynb
+++ b/2 - Text data preprocessing/Text data preprocessing.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><b><font size=6>Text data pre-processing</font></b></center>\n",
+    "This notebook is part of the [Machine Learning class](https://github.com/erachelson/MLclass) by [Emmanuel Rachelson](https://personnel.isae-supaero.fr/emmanuel-rachelson?lang=en).\n",
+    "\n",
+    "License: CC-BY-SA-NC."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"font-size:22pt; line-height:25pt; font-weight:bold; text-align:center;\">Text data pre-processing</div>\n",
     "\n",
     "In this exercice, we shall load a database of email messages and pre-format them so that we can design automated classification methods or use off-the-shelf classifiers.\n",
     "\n",
@@ -24,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load the data\n",
+    "# 1. Load the data\n",
     "\n",
     "Let's first load the emails."
    ]
@@ -73,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Filtering out the noise\n",
+    "# 2. Filtering out the noise\n",
     "\n",
     "One nice thing about scikit-learn is that is has lots of preprocessing utilities. Like [`CountVectorizer`](http://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html) for instance, that converts a collection of text documents to a matrix of token counts.\n",
     "\n",
@@ -121,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Even better filtering\n",
+    "# 3. Even better filtering\n",
     "\n",
     "That's already quite ok, but this pre-processing does not perform lemmatization, the list of stop-words could be better and we could wish to remove non-english words (misspelled, with numbers, etc.).\n",
     "\n",
@@ -200,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Term frequency times inverse document frequency\n",
+    "# 4. Term frequency times inverse document frequency\n",
     "\n",
     "After this first preprocessing, each document is summarized by a vector of size \"number of words in the extracted dictionnary\". For example, the first email in the list has become:"
    ]
@@ -411,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Utility function\n",
+    "# 5. Utility function\n",
     "\n",
     "Let's put all this loading process into a separate file so that we can reuse it in other experiments."
    ]
