--- a/6 - Artificial Neural Networks/Artificial neural networks.ipynb
+++ b/6 - Artificial Neural Networks/Artificial neural networks.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Artificial Neural Networks\n",
+    "This notebook is part of the [Machine Learning class](https://github.com/erachelson/MLclass) by [Emmanuel Rachelson](https://personnel.isae-supaero.fr/emmanuel-rachelson?lang=en).\n",
+    "\n",
+    "License: CC-BY-SA-NC."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"font-size:22pt; line-height:25pt; font-weight:bold; text-align:center;\">Artificial Neural Networks</div>\n",
     "\n",
     "1. [Biological neural networks](#sec1)\n",
     "2. [Artificial neural networks](#sec2)\n",
@@ -394,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Backpropagation**\n",
+    "## 4.5 Backpropagation\n",
     "\n",
     "If neuron $j$ is an output neuron, then $z_j$ is the $j$th component of $f_\\theta(x)$. So $ \\frac{\\partial f_\\theta}{\\partial z_j}(x) = 1$. Consequently, for those neurons:\n",
     "$$\\frac{\\partial f_\\theta}{\\partial w_{ij}}(x) = \\sigma'(y_j) x_{ij}$$\n",
