--- a/10 - Bagging/Bagging.ipynb
+++ b/10 - Bagging/Bagging.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bagging\n",
+    "This notebook is part of the [Machine Learning class](https://github.com/erachelson/MLclass) by [Emmanuel Rachelson](https://personnel.isae-supaero.fr/emmanuel-rachelson?lang=en).\n",
+    "\n",
+    "License: CC-BY-SA-NC."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"font-size:22pt; line-height:25pt; font-weight:bold; text-align:center;\">Bagging</div>\n",
     "\n",
     "1. [The bootstrap (statistics)](#sec1)\n",
     "2. [Bootstraping in Machine Learning](#sec2)\n",
