--- a/8 - Decision Trees/Decision Trees.ipynb
+++ b/8 - Decision Trees/Decision Trees.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Decision Trees\n",
+    "This notebook is part of the [Machine Learning class](https://github.com/erachelson/MLclass) by [Emmanuel Rachelson](https://personnel.isae-supaero.fr/emmanuel-rachelson?lang=en).\n",
+    "\n",
+    "License: CC-BY-SA-NC."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"font-size:22pt; line-height:25pt; font-weight:bold; text-align:center;\">Decision Trees</div>\n",
     "\n",
     "\n",
     "1. [The Iris dataset](#sec1)\n",
