--- a/9 - Boosting/Boosting.ipynb
+++ b/9 - Boosting/Boosting.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Boosting\n",
+    "This notebook is part of the [Machine Learning class](https://github.com/erachelson/MLclass) by [Emmanuel Rachelson](https://personnel.isae-supaero.fr/emmanuel-rachelson?lang=en).\n",
+    "\n",
+    "License: CC-BY-SA-NC."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"font-size:22pt; line-height:25pt; font-weight:bold; text-align:center;\">Boosting</div>\n",
     "\n",
     "Boosting is a procedure that combines several \"weak\" predictors into a powerful \"committee\". It belongs to the family of committee-based or ensemble methods in Machine Learning.\n",
     "\n",
