added TODO in NN chapter

--- a/6 - Artificial Neural Networks/TODO
+++ b/6 - Artificial Neural Networks/TODO
@@ -1,4 +1,4 @@
-Get rid of $\theta$ and replace it with $w$.
-Introduce a component-wise udpate at the end of section 4.2: $w_{ij} \leftarrow w_{ij} - \alpha_k g(w_k)_{ij}$
-Write code for backprop.
+Try excessively large step-sizes -> danger in SGD
+
+Remark: a NN with no hidden layer is a linear function
 
