--- a/2 - Text data preprocessing/Text data preprocessing.ipynb
+++ b/2 - Text data preprocessing/Text data preprocessing.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#1.-Load-the-data\" data-toc-modified-id=\"1.-Load-the-data-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>1. Load the data</a></span></li><li><span><a href=\"#2.-Filtering-out-the-noise\" data-toc-modified-id=\"2.-Filtering-out-the-noise-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>2. Filtering out the noise</a></span></li><li><span><a href=\"#3.-Even-better-filtering\" data-toc-modified-id=\"3.-Even-better-filtering-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>3. Even better filtering</a></span></li><li><span><a href=\"#4.-Term-frequency-times-inverse-document-frequency\" data-toc-modified-id=\"4.-Term-frequency-times-inverse-document-frequency-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>4. Term frequency times inverse document frequency</a></span></li><li><span><a href=\"#5.-Utility-function\" data-toc-modified-id=\"5.-Utility-function-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>5. Utility function</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "This notebook is part of the [Machine Learning class](https://github.com/erachelson/MLclass) by [Emmanuel Rachelson](https://personnel.isae-supaero.fr/emmanuel-rachelson?lang=en).\n",
@@ -40,8 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-08T13:52:39.328796Z",
+     "start_time": "2018-10-08T13:52:39.172635Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -93,8 +108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-08T13:52:47.404302Z",
+     "start_time": "2018-10-08T13:52:42.691109Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
@@ -104,8 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-08T13:52:49.004851Z",
+     "start_time": "2018-10-08T13:52:48.926879Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -145,8 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-08T13:52:58.115382Z",
+     "start_time": "2018-10-08T13:52:51.966698Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from nltk import wordpunct_tokenize          \n",
@@ -181,8 +211,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-08T13:52:58.148578Z",
+     "start_time": "2018-10-08T13:52:58.117096Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -216,8 +250,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-08T13:53:01.283024Z",
+     "start_time": "2018-10-08T13:53:01.261090Z"
+    },
     "scrolled": false
    },
    "outputs": [
@@ -320,8 +358,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-08T13:53:06.126250Z",
+     "start_time": "2018-10-08T13:53:06.102174Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -329,7 +372,7 @@
        "(2893, 14279)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,8 +392,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-08T13:53:08.606440Z",
+     "start_time": "2018-10-08T13:53:08.601960Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -427,8 +475,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-08T13:53:15.239967Z",
+     "start_time": "2018-10-08T13:53:11.837369Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import load_spam\n",
@@ -438,8 +491,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-08T13:53:16.164299Z",
+     "start_time": "2018-10-08T13:53:16.156978Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -485,6 +543,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "384px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
