--- a/3 - SVMs, bias-variance, and kernels/Support Vector Machines, Bias-Variance tradeoff and an Introduction to Kernel Theory.ipynb
+++ b/3 - SVMs, bias-variance, and kernels/Support Vector Machines, Bias-Variance tradeoff and an Introduction to Kernel Theory.ipynb
@@ -608,7 +608,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "nbpresent": {
@@ -1028,9 +1027,9 @@
     "By maximizing the margin, SVMs actually try to minimize the variance of the family of functions considered: that is a way of trying to find the \"simplest\" function possible by minimizing $\\|w\\|$. This process is called **regularization** in Machine Learning. SVMs perform an $L_2$ regularization, but other forms of regularization exist and are commonly being used (e.g. $L_1$ regularization).\n",
     "\n",
     "The bias-variance tradeoff captures the problem of **overfitting** (due to high variance) versus **underfitting** (due to high bias). Let's try to capture this formally. Assume a supervized learning task where one has data $y = f(x) + \\epsilon$, where $f$ is a deterministic function and $\\epsilon$ is a zero-mean noise with variance $\\sigma^2$. The mean square generalization error of a prediction function $\\hat{f}$ is:\n",
-    "$$err =  \\mathbb{E}_x\\left( \\mathbb{E}_{y\\sim f(x)+\\epsilon} \\left( \\left( y - f(x)\\right)^2 \\right) \\right) = \\mathbb{E} _x \\left( err(x) \\right)$$\n",
+    "$$err =  \\mathbb{E}_x\\left( \\mathbb{E}_{y\\sim f(x)+\\epsilon} \\left( \\left( y - \\hat{f}(x)\\right)^2 \\right) \\right) = \\mathbb{E} _x \\left( err(x) \\right)$$\n",
     "with:\n",
-    "$$err(x) = \\mathbb{E}_{y\\sim f(x)+\\epsilon} \\left( \\left( y - f(x)\\right)^2 \\right)$$\n",
+    "$$err(x) = \\mathbb{E}_{y\\sim f(x)+\\epsilon} \\left( \\left( y - \\hat{f}(x)\\right)^2 \\right)$$\n",
     "\n",
     "Let's write $\\mathbb{E}=\\mathbb{E}_{y\\sim f(x)+\\epsilon}$, $f=f(x)$ and $\\hat{f} = \\hat{f}(x)$ for simplicity.\n",
     "\n",
@@ -2228,6 +2227,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
